package it.polimi.ingsw.am01.model;

public enum CardColor {
    RED,
    GREEN,
    BLUE,
    PURPLE,
    NEUTRAL
}
