package it.polimi.ingsw.am01.model;

public sealed interface Collectible permits Item, Resource {
}
