package it.polimi.ingsw.am01.model;

public enum CornerPosition {
    TOP_RIGHT,
    TOP_LEFT,
    BOTTOM_LEFT,
    BOTTOM_RIGHT
}