package it.polimi.ingsw.am01.model;

import java.util.List;

public class GameAssets {
    public static List<Card> getResourceCards() {
        throw new UnsupportedOperationException("TODO");
    }

    public static List<Card> getGoldenCards() {
        throw new UnsupportedOperationException("TODO");
    }

    public static List<Card> getStarterCards() {
        throw new UnsupportedOperationException("TODO");
    }

    public static List<Objective> getObjectives() {
        throw new UnsupportedOperationException("TODO");
    }

    private GameAssets() {
        throw new UnsupportedOperationException("TODO");
    }
}