package it.polimi.ingsw.am01.model;

public enum Item implements Collectible {
    QUILL,
    INKWELL,
    MANUSCRIPT
}