package it.polimi.ingsw.am01.model;

public enum PlayerColor {
    RED,
    GREEN,
    BLUE,
    YELLOW
}