package it.polimi.ingsw.am01.model;

public class PlayerProfile {
    private String name;

    public PlayerProfile(String name) {
        throw new UnsupportedOperationException("TODO");
    }

    public boolean isConnected() {
        throw new UnsupportedOperationException("TODO");
    }
}