package it.polimi.ingsw.am01.model;

public interface PointsPanel {
    int calculateScoredPoints(CardPlacement cp);
}
