package it.polimi.ingsw.am01.model;

import java.util.Iterator;

public class WindowIterator implements Iterator<Window> {
    private int offsetI;
    private int offsetJ;
    private int maxI;
    private int maxJ;
    private int w;
    private int h;

    @Override
    public boolean hasNext() {
        throw new UnsupportedOperationException("TODO");
    }

    @Override
    public Window next() {
        throw new UnsupportedOperationException("TODO");
    }
}
