package it.polimi.ingsw.am01.model.card;

public enum Side {
    FRONT,
    BACK
}