package it.polimi.ingsw.am01.model.game;

public class Position {
    private int i;
    private int j;

    public Position(int i, int j) {
        throw new UnsupportedOperationException("TODO");
    }

    public int getI() {
        throw new UnsupportedOperationException("TODO");
    }

    public int getJ() {
        throw new UnsupportedOperationException("TODO");
    }
}
